# doc-rag-assistant

./: .gitignore  README.md  pyproject.toml
scripts/dev/: run_local.sh
src/doc_rag/: main.py  ui.py
src/doc_rag/adapters/llm/: openai_client.py
src/doc_rag/adapters/loaders/: md_loader.py  pdf_loader.py
src/doc_rag/adapters/vectorstore/: faiss_store.py
src/doc_rag/core/: models.py  settings.py
src/doc_rag/services/: chunking.py  embedding.py  indexer.py  intent.py  reranker.py  retriever.py
